FWCO-34: add transfer workflow.